--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sparticuz/chromium": "^119.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "puppeteer-core": "21.5.0"
   }
